# binary-clock

./: .gitignore  CHANGELOG.md  CMakeLists.txt  make_appimage.sh
include/app/: digit.h  env.h  time.h
include/controller/: main.h  states.h
include/dfwimpl/: config.h  state_driver.h
linuxdeploy/: binary-clock.desktop  com.dpastor.binary-clock.appdata.xml
resources/data/config/: config.json
scripts/templates/include/dfwimpl/: state_driver.h
scripts/templates/src/dfwimpl/: state_driver.cpp
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  digit.cpp  env.cpp  time.cpp
src/controller/: CMakeLists.txt  main.cpp
src/dfwimpl/: config.cpp  state_driver.cpp
